[tool.poetry]
name = "bookmark-manager"
version = "0.1.0"
description = ""
authors = ["Hyperoot <hyperoot.tech@proton.me>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
mkdocs-material = "^9.5.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
